--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
       <artifactId>log4j-api</artifactId>
       <version>2.17.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
