--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 db.user = root
 db.password = lolik123
 db.poolsize = 10
-db.url = jdbc:mysql://localhost:3306/conference
+db.url = jdbc:mysql://localhost:3306/conferences
 db.useUnicode = true
 db.encoding = UTF-8
