--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,33 +10,65 @@
         <servlet-name>main</servlet-name>
         <servlet-class>com.epam.conference.Controller</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>conferences</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>requests</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>conference-creation</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>section-creation</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>sections</servlet-name>
+        <servlet-class>com.epam.conference.Controller</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>conferences</servlet-name>
         <url-pattern>/conferences</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>requests</servlet-name>
         <url-pattern>/requests</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>conference-creation</servlet-name>
         <url-pattern>/conference-creation</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>section-creation</servlet-name>
         <url-pattern>/section-creation</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>logout</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>main</servlet-name>
+        <servlet-name>sections</servlet-name>
         <url-pattern>/sections</url-pattern>
     </servlet-mapping>
 
