--- a/src/main/resources/pagecontent.properties
+++ b/src/main/resources/pagecontent.properties
@@ -1,5 +1,12 @@
 #Locale en-US
 
+login.welcome = Please sign in
+login.login = Login
+login.password = Password
+login.signin = Sign in
+login.notregistered = Not registered
+login.create-account = Create an account
+
 nav.requests = Requests
 nav.conferences = Conferences
 nav.conference = Conference
